# n9e-agentd

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod  go.sum
cmd/agent/: agent.go  agentd.go  app.go
cmd/agent/common/: common.go  common_windows.go  import.go  loader.go
cmd/agentctl/: main.go
cmd/agentd/: agentd.go  app.go
cmd/agentd/app/: app.go
cmd/agentd/common/: autodiscovery.go  common.go  common_nix.go  common_windows.go  loader.go  system_probe_config_helper.go
cmd/agentdctl/: cmds.go  main.go
cmd/mocker/: collectrules.go  main.go  payload.go  stats.go
cmd/system-probe/: loader.go  main.go  main_linux.go  main_windows.go
cmd/system-probe/api/: common.go
cmd/system-probe/config/: config.go  config_windows.go
cmd/system-probe/modules/: all_linux.go  all_windows.go  network_tracer.go  network_tracer_test.go  oom_kill_probe.go  process.go  security_runtime.go  tcp_queue_tracer.go
cmd/system-probe/utils/: utils.go
docs/: README.md  agent-command.md  centos6.md  develop.md  metrics.md  statsd.md
docs/integrations/: snmp.md
etc/: agent.yml  datadog.yaml
etc/conf.d/: .gitignore
misc/etc/: agentd.env  agentd.rc  agentd.yaml  agentd.yaml.default
misc/n9e-agentd/: after_install.sh.in  after_remove.sh.in  after_upgrade.sh.in  before_remove.sh.in
misc/omnibus/: Gemfile  Makefile  omnibus.rb  openssl.sh  run.sh  run1.sh
misc/packaging/: dd-filelist.txt
misc/rtloader/: CMakeLists.txt  run.sh
misc/script.d/: sample.sh
misc/scripts.d/: README.md  sample.sh
misc/systemd/: n9e-agentd.service
pkg/agent/: agent.go  environment.go  exporter.go  settings.go  util.go
pkg/agentctl/: agentctl.go  config.go  environment.go  request.go  util.go
pkg/agentdctl/: agentdctl.go  args.go  config.go  config_test.go  docs.go  environment.go  hook.go  input.go  login.go  util.go
pkg/aggregator/: aggregator.go  aggregator_test.go  check_sampler.go  check_sampler_bench_test.go  check_sampler_test.go  context_resolver.go  context_resolver_test.go  sender.go  sender_test.go  sketch_map.go  sketch_map_test.go  time_sampler.go  time_sampler_test.go
pkg/api/: collectrules.go  const.go  interface.go  types.go
pkg/apiserver/: agent.go  agent_jmx.go  agent_nojmx.go  apiserver.go  config.go  grpc.go  logwatcher.go  platform_nowindows.go  platform_windows.go  python_status.go  python_status_nopython.go  route.go  security.go  server.go  util.go
pkg/authentication/: authentication.go  platform_nowindows.go  platform_windows.go  security.go  util.go
pkg/autodiscovery/: autoconfig.go  autoconfig_test.go  common_test.go  config_poller.go  store.go  store_test.go  templatecache.go  templatecache_test.go
pkg/collector/: collector.go  collector_test.go  embed_python.go  scheduler.go  scheduler_test.go  stats.go
pkg/config/: autodiscovery.go  config.go  config_android.go  config_darwin.go  config_default.go  config_nix.go  config_overrides.go  config_test.go  config_windows.go  container.go  default.go  detection.go  environment_containers.go  environment_detection.go  flavor.go  log.go  log_nix.go  log_nix_test.go  log_test.go  mock.go  settings.go  snmp.go  standard_names.go  transformer.go  util.go
pkg/ctl/: ctl.go  environment.go
pkg/data/: Makefile  resources.go
pkg/dogstatsd/: float64_list_pool.go  parse.go  parse_events.go  parse_service_checks.go  server_bench_test.go
pkg/forwarder/: blocked_endpoints.go  blocked_endpoints_test.go  domain_forwarder.go  domain_forwarder_test.go  forwarder.go  forwarder_health.go  forwarder_test.go  sync_forwarder.go  telemetry.go  test_common.go  worker.go  worker_test.go
pkg/i18n/: i18n.go  i18n_test.go
pkg/metrics/: .!73249!context_metrics_test.go  context_metrics.go  context_metrics_test.go  histogram.go  histogram_test.go  metric_sample_pool.go  metric_sample_test.go  series.go  series_test.go  sketch_series.go  sketch_series_test.go  test_helper.go  test_helper_test.go
pkg/mocker/: collectrules.go  config.go  dd.go  mocker.go  n9e.go  payload.go  statsd.go  util.go
pkg/options/: build.go  build_test.go  context.go  interface.go  options.go  reporter.go
pkg/processor/: polices.go  processor.go  series.go
pkg/util/: core.go  core_windows.go  hostname.go  log.go  prettify.go  rootdir.go  util.go  util_test.go  validate.go  validate_test.go
pkg/validation/: validation.go
pkg/version/: base.go
plugins/all/: all.go
plugins/demo/: conf.yaml.example  demo.go  demo_test.go  doc.go
plugins/log/: log.go
plugins/mysql/: conf.yaml.example  config.go  const.go  doc.go  innodb_metrics.go  mysql.go  mysql_check.go  mysql_test.go  query.go  statement_samples.go  statements.go  types.go  util.go  version_utils.go
plugins/port/: desc.go  doc.go  port.go  port_test.go
plugins/proc/: README.md  process.go
plugins/process/: desc.go  doc.go  process.go
plugins/prometheus/: conf.yaml.example  prometheus.go  prometheus_test.go  sender.go
plugins/script/: script.go  script_test.go  sender.go
plugins/snmp/: config_metric_test.go  snmp.go
rtloader/demo/: CMakeLists.txt
scripts/: .gitignore  build-glib212.sh  build.sh  dd-diff.sh  docker-run.sh  gen-envs.sh  go-build-env.sh  go-build-envs.sh  go-build-ldflags.sh  n9e-agentd.cmake  objs.mk  omnibus.sh  package.cmake  pkg.sh  pkgs.sh  release.sh  selinux.sh
staging/datadog-agent/: .gitignore  go.mod  go.sum
(+1756 files in other folders)
